--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["croumegous <cyril.roumegous@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.10"
+python = ">=3.8,<3.10"
 numpy = "1.22.4"
 requests = "^2.28.2"
 gtts = "^2.3.1"
@@ -18,9 +18,9 @@ openai = "^0.27.2"
 ftfy = "^6.1.1"
 soundfile = "^0.12.1"
 torch = { version = "=1.13.1", source = "torch" }
-torchaudio = { version = "=0.13.1", source = "torch" }
-openai-whisper = "^20230314"
 pyaudio = "^0.2.13"
+transformers = "^4.27.1"
+pygobject = "^3.44.1"
 
 [[tool.poetry.source]]
 name = "torch"
