--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pyaudio = "^0.2.13"
 transformers = "^4.27.1"
 pygobject = "^3.44.1"
 precise-runner = {file = "packages/precise_runner-0.3.1-py3-none-any.whl"}
+faster-whisper = "^0.5.0"
 
 [[tool.poetry.source]]
 name = "torch"
